# gmdsl

./: README.md  pyproject.toml
examples/: GM.Core.gm  MyGraphDataModel.gm
src/gmdsl/: ast.py  cli.py  codegen.py  grammar.lark  loader.py  parser.py  validation.py
src/gmdsl/plugins/: csharp_plugin.py  cypher_plugin.py  debug_plugin.py  openapi_plugin.py
tests/: conftest.py  test_cli.py  test_codegen.py  test_csharp_generator.py  test_cypher_generator.py  test_loader.py  test_parser.py  test_validation.py
