[project]
name = "gmdsl"
version = "0.1.0"
description = "A Domain Specific Language for Graph Models"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
# Add other classifiers as needed: https://pypi.org/classifiers/
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers",
]
dependencies = [
    "lark-parser~=0.12.0", # Using compatible version
    "click>=8.0",          # For the CLI
    "pyyaml>=6.0.2",       # For YAML support
    "inflect>=7.5.0",      # For pluralization
    "apispec>=6.3.0",      # For OpenAPI generation (replaces openapi-core)
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[project.scripts]
gmdsl = "gmdsl.cli:main" # Entry point for the CLI

# Add entry points for plugins
[project.entry-points."gmdsl.plugins"]
debug = "gmdsl.plugins.debug_plugin:DebugGenerator"
cypher = "gmdsl.plugins.cypher_plugin:CypherGenerator"
csharp = "gmdsl.plugins.csharp_plugin:CSharpGenerator"
openapi = "gmdsl.plugins.openapi_plugin:OpenAPIGenerator"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"] # Removed 'plugins'

[tool.ruff]
# Optional: Configure Ruff linter/formatter
line-length = 88

[tool.black]
# Optional: Configure Black formatter
line-length = 88
